--- a/frontend/landmark-selector.html
+++ b/frontend/landmark-selector.html
@@ -1,12 +1,7 @@
 <!-- FILE: extensions/plugins/gesture-vision-plugin-gesture-studio/frontend/landmark-selector.html -->
-<!-- FIX: Add inset-0 to ensure it covers its parent when nested -->
 <div id="landmark-selector-modal" class="modal hidden inset-0" role="dialog" aria-modal="true">
   <div class="modal-content !max-w-3xl h-[90vh]">
-    <h3 class="modal-header">
-      <span class="material-icons header-icon"></span>
-      <span id="landmark-selector-title" class="header-title"></span>
-      <button id="landmark-selector-close-btn" class="btn btn-icon header-close-btn"></button>
-    </h3>
+    <!-- modal-settings-head-inject -->
     <div class="modal-scrollable-content !p-0">
       <div id="landmark-canvas-container" class="w-full h-full flex justify-center items-center bg-background overflow-hidden relative">
         <canvas id="landmark-selector-canvas" class="max-w-full max-h-full object-contain cursor-pointer"></canvas>
