--- a/frontend/studio-modal.html
+++ b/frontend/studio-modal.html
@@ -1,11 +1,7 @@
 <!-- FILE: extensions/plugins/gesture-vision-plugin-gesture-studio/frontend/studio-modal.html -->
 <div id="studio-shell" class="modal visible" role="dialog" aria-modal="true" aria-labelledby="studio-header-title-text">
     <div class="modal-content !max-w-6xl h-[90vh]">
-        <h3 class="modal-header">
-            <span id="studio-header-icon" class="material-icons header-icon"></span>
-            <span id="studio-header-title-text" class="header-title" data-translate-key="pluginStudioName"></span>
-            <button id="close-studio-btn" class="btn btn-icon header-close-btn" data-translate-key-aria-label="close"></button>
-        </h3>
+        <!-- modal-settings-head-inject -->
         <div class="modal-scrollable-content p-2 desktop:p-4">
             <div id="studio-content-wrapper" class="flex flex-col desktop:flex-row gap-4 w-full h-full">
                 <div id="studio-video-column" class="flex-grow-[2] min-w-0 min-h-[200px] desktop:min-h-0 relative flex">
@@ -28,7 +24,6 @@
                         </div>
                         <div class="flex-grow min-h-0 flex flex-col">
                             <section id="define-section" class="flex flex-col justify-between h-full">
-                                <!-- FIX: Add 'flex flex-col gap-3' for consistent spacing -->
                                 <div class="flex flex-col gap-3">
                                     <div class="form-group !mb-0"><label id="label-gesture-name" for="gesture-name" class="form-label" data-translate-key="studioGestureName"></label><input type="text" id="gesture-name" class="form-control" data-translate-key-placeholder="studioGestureNamePlaceholder"></div>
                                     <div class="form-group !mb-0"><label id="label-gesture-description" for="gesture-description" class="form-label" data-translate-key="studioGestureDesc"></label><textarea id="gesture-description" class="form-control" rows="2" data-translate-key-placeholder="studioGestureDescPlaceholder"></textarea></div>
